--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Leaf.js",
-  "description": "Leaf.js is a lightweight Model-View framework for creating client-side web applications.",
-  "version": "0.0.1",
+  "description": "Leaf.js is a lightweight MV* framework for creating client-side web applications.",
+  "version": "1.0.0",
   "author": "Eric Harms",
   "repository": {},
   "devDependencies": {
