--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Leaf.js",
+  "name": "leaf.js",
   "description": "Leaf.js is a lightweight MV* framework for creating client-side web applications.",
   "version": "1.0.3",
   "author": "Eric Harms",
