--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "leaf.js",
   "description": "Leaf.js is a lightweight MV* framework for creating client-side web applications.",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "author": "Eric Harms",
   "repository": {},
   "devDependencies": {
@@ -9,6 +9,7 @@
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.11.0",
+  	"grunt-text-replace": "~0.4.0",
     "http-server": "~0.6.1"
   },
   "scripts": {
