--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-uglify": "~0.11.0",
-  	"grunt-text-replace": "~0.4.0",
-    "http-server": "~0.6.1"
+    "grunt-text-replace": "~0.4.0",
+    "http-server": "~0.6.1",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2"
   },
   "scripts": {
     "start": "http-server -a localhost -p 8000 -c-1"
