--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "grunt-contrib-uglify": "~0.11.0",
     "grunt-text-replace": "~0.4.0",
     "http-server": "~0.6.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2"
+	"grunt-karma": "^0.8.3",
+    "karma": "^0.12.17",
+    "jasmine-core": "^2.3.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-firefox-launcher": "~0.1"
   },
   "scripts": {
     "start": "http-server -a localhost -p 8000 -c-1"
